correct spacing in projects

--- a/app.css
+++ b/app.css
@@ -111,6 +111,7 @@ ul.links:last-child li:last-child:after {
   width: 100%;
   margin: 0;
   font-size: 17px;
+  line-height: 18px;
 }
 
 @media (max-width: 900px) {
